# hal0

./: .gitignore  .graphifyignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  manifest.json  pyproject.toml
.github/workflows/: agent-shim-smoke.yml  bootstrap-parity.yml  ci.yml  hermes-sdk-diff.yml  integration.yml  nightly.yml  playwright.yml  release.yml  toolbox.yml
docs/: README.md  api-errors.md  handoff-2026-05-15-autonomous.md  index.mdx  migration.md  models-slots-impl-plan.md  release-manifest.md  v0.2-upgrade.md
docs/adr/: 0001-collapse-edge-auth-into-fastapi.md
docs/agents/: domain.md  hermes-bootstrap.md  identity.md  mcp-client.md  overview.md
docs/api/: agents.md  audio.mdx  images-generation.mdx  mcp.md  openai-compat.mdx  slot-as-model.mdx  streaming.mdx
docs/concepts/: agents.mdx  architecture.mdx  capabilities-and-profiles.mdx  memory.mdx  security.mdx  slots.mdx  strix-halo.mdx
docs/dashboard/: v3.md
docs/dev/: web-ui-mocks.md
docs/getting-started/: first-chat.mdx  first-model.mdx  index.mdx  install.mdx  setup.mdx
docs/guides/: choose-models.mdx  configure.mdx  connect-external-providers.mdx  connect-mcp.mdx  enable-memory.mdx  generate-images.mdx  logs-and-activity.mdx  manage-slots.mdx  pull-and-register-models.mdx  run-agents.mdx  update-and-rollback.mdx  voice-stt-tts.mdx
docs/hardware/: amd-discrete.mdx  cpu-only.mdx  nvidia.mdx  overview.md  strix-halo.mdx
docs/internal/: SESSION_HANDOFF_2026-05-22.md  api-errors.md  dashboard-v2-implementation-plan-2026-05-23.md  hermes-bootstrap-plan-2026-05-23.md  hermes-env-probe-recipes-2026-05-23.md  hermes-home-system-gateway-migration-2026-06-03.md  hermes-home-system-gateway-migration-plan-2026-06-03.md  hermes-state-md-auto-render-2026-06-04-plan.md  hermes-state-md-auto-render-2026-06-04.md  hermes-upstream-map-2026-05-23.md  install-test-harness.md  lemonade-adoption-plan-2026-05-22.md  lemonade-migration-plan.md  lemonade-repo-deep-dive-2026-05-22.md  metrics-prototype.md  migration.md  primary-model-eval-2026-05-22.md  release-manifest.md  v0.3-state.md  vue-dashboard-archive.md
docs/mcp/: hal0-admin.md  hal0-memory.md  overview.md
docs/memory/: graph.md  overview.md  private-namespacing.md
docs/operate/: auth.mdx  config.mdx  container-runtime.md  lemonade.md  logs.mdx  openwebui.mdx  updates.mdx
docs/reference/: cli.mdx  config-schema.mdx  env-vars.mdx  hardware-matrix.mdx  mcp-tools.mdx  model-roster-benchmark.mdx  paths-and-files.mdx  provider-matrix.mdx  providers-profiles-devices.mdx  slot-lifecycle.mdx
docs/release-notes/: v0.2.0.md
docs/slots/: built-in-slots.mdx  custom-slots.mdx  huggingface-pulls.mdx  loadouts.mdx  model-registry.mdx  what-is-a-slot.mdx
graphify-out/: GRAPH_REPORT.md  manifest.json
installer/: README.md  bootstrap.sh  install.sh  uninstall.sh
installer/agents/: hermes-agent.sh  hermes-prereqs.sh  pi-coder.sh
installer/bench/: README.md  config.sh  generate_results_json.py  run_benchmarks.sh
installer/comfyui/: extra_model_paths.yaml
installer/etc-hal0/: profiles.toml
installer/lib/: distro.sh  preflight.sh  run-as-hal0.sh  ui.sh
installer/systemd/: hal0-agent@.service  hal0-api.service  hal0-openwebui.service  hal0-slot@.service  hindsight-api.service
installer/wrappers/: hal0-agentenv  hal0-benchctl  hal0-hermes  hal0-slotctl  hermes
packaging/avahi/: hal0.service
packaging/caddy/: Caddyfile.template
packaging/sudoers/: hal0-agentenv  hal0-benchctl  hal0-comfyui  hal0-slotctl
packaging/systemd/: hal0-caddy.service  hal0-openwebui.service  hal0-slot@.service
packaging/toolbox/: .dockerignore  comfyui.Dockerfile  cpu.Dockerfile  flm.Dockerfile  kokoro.Dockerfile  moonshine.Dockerfile  rocm.Dockerfile  vulkan.Dockerfile
scripts/: check-bootstrap-parity.sh  deploy.sh  dev-bootstrap.sh  fork-pi-mono.sh  fresh-test-ct.sh  harness-report.py  harness.sh  hermes-sdk-diff.sh  import_haloai_models.py  migrate-haloai.py  register_mnt_ai_models.py  release-check.sh  release-test-report.py  release-test.sh  smoke-pi-coder.sh  update-toolbox-digests.sh
scripts/prototype_ttft/: NOTES.md  README.md  live_probe.py  metrics_core.py  tui.py
scripts/proxmox-ve/: README.md  hal0.sh
scripts/release-prototype/: RELEASE_PIPELINE_NOTES.md  verify-roundtrip.sh
src/hal0/: __init__.py  errors.py  model_fit.py
tests/: conftest.py  release-gate-report.json  test_import.py
tests/activity/: test_store.py
tests/agents/: _hermes_fakes.py  conftest.py  test_agent_memory_stats_endpoint.py  test_agent_restart_endpoint.py  test_budget_module.py  test_hal0_memory_client.py  test_hermes_env_seam.py  test_hermes_live_resolve_render.py  test_hermes_provision.py  test_hermes_provision_collect.py  test_hermes_provision_context.py  test_hermes_provision_idempotency.py  test_hermes_provision_install_artifacts.py  test_hermes_provision_ownership.py  test_hermes_state_render.py  test_hermes_upgrade.py  test_hermes_wrapper.py  test_manager.py  test_mcp_client.py  test_personas.py  test_personas_budget_roundtrip.py  test_pi_coder_shim.py  test_run_as_hal0_guard.py
tests/api/: conftest.py  test_activity.py  test_activity_instrumentation.py  test_activity_routes_instrumented.py  test_agents_budget.py  test_agents_personas.py  test_agents_routes.py  test_apply_selections.py  test_approvals.py  test_auth_middleware.py  test_auth_routes.py  test_auth_writer_scope.py  test_bundles_route.py  test_chat_normalization.py  test_chat_proxy.py  test_chat_proxy_auth.py  test_chat_templates.py  test_comfyui_fetch_route.py  test_comfyui_phase4.py  test_comfyui_proxy.py  test_config_model_roots.py  test_config_urls.py  test_cpu_util.py  test_dashboard_layout.py  test_events.py  test_events_fixes.py  test_features_health.py  test_firstrun_auth_cookie.py  test_gpu_arbiter_idle_lifespan.py  test_hardware_routes.py  (+75 more)
ui/: .env.example  CONTRACTS.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.js  vite.config.ts
(+1102 files in other folders)
