[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "hal0"
version = "0.8.0-beta.2"
description = "Open-source home AI inference platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "hal0 contributors" }]
keywords = ["ai", "llm", "inference", "openai-compatible", "homeai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.28",
  "pydantic>=2.10",
  "pydantic-settings>=2.6",
  "typer>=0.15",
  "structlog>=24.4",
  "tomli-w>=1.0",
  "rich>=13.9",
  # ADR-0005 (Phase 8): Cognee is hal0's embedded memory engine.
  # Apache 2.0; pulls aiosqlite + lancedb + kuzu underneath. Verified
  # 2026-05-22 to NOT pull torch / nvidia / cuda wheels on a CPU-only
  # install (lancedb + pylance are Rust-built and ship CPU wheels).
  # Pinned to 1.0.7 (released 2026-05-05, >2 weeks of soak before
  # adoption); pin window kept tight per ADR-0005 §"Consequences" —
  # Cognee's Python API is now the upstream contract for /mcp/memory.
  "cognee==1.0.7",
  # ADR-0005 §1: fastembed gives Cognee a CPU-only ONNX embedding
  # backend so we don't require an OpenAI key on a fresh hal0 install.
  # Pulls onnxruntime, NOT torch/CUDA. Bundled with cognee but only
  # via the [fastembed] extra, so we list it explicitly.
  "fastembed>=0.8,<1.0",
  # ADR-0004 (Phase 8): hal0 ships /mcp/admin + /mcp/memory MCP servers.
  # MIT-licensed Python SDK; consumed by hal0.mcp.* — required at
  # import time, hence core (not optional).
  "mcp==1.27.0",
  # v0.3 Hermes-Agent bootstrap (issue #241): config_write phase
  # renders $HERMES_HOME/config.yaml from a Jinja2 template + deep-merges
  # /etc/hal0/agents/hermes/overrides.yaml. Both libs were already
  # transitive via cognee/fastapi; pin them explicitly so the bootstrap
  # surface stops relying on a sibling package keeping them on disk.
  "Jinja2>=3.1",
  "PyYAML>=6.0",
  "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "ruff>=0.8",
  "mypy>=1.13",
  "httpx>=0.28",
  # Runtime deps of the in-container moonshine_server, loaded via
  # importlib by tests/providers/test_moonshine_server.py. Not on the
  # hal0 production path — only the toolbox image needs them at runtime
  # — but the test suite exercises the redaction logic from harness
  # finding #14.
  "numpy>=2.0",
  "soundfile>=0.12",
  # FastAPI's File()/UploadFile/Form() construction (used by the
  # moonshine_server multipart route) requires python-multipart at
  # import time. Same scope as numpy + soundfile above — toolbox-only
  # at runtime, but the test suite imports the FastAPI app.
  "python-multipart>=0.0.9",
]

[project.scripts]
hal0 = "hal0.cli.main:app"
# hal0-agent is the small subprocess wrapper invoked by the systemd
# template ``hal0-agent@<id>.service`` (installer/systemd/). Kept as a
# separate console script (not a ``hal0 agent shim`` subcommand) so the
# unit's ExecStart points at a stable PATH binary instead of the full
# typer-loaded ``hal0`` CLI surface. See ``src/hal0/cli/agent_shim.py``
# for rationale and ``installer/systemd/hal0-agent@.service`` for the
# unit that drives it.
hal0-agent = "hal0.cli.agent_shim:main"

[project.urls]
Homepage = "https://hal0.dev"
Repository = "https://github.com/hal0ai/hal0"

[tool.hatch.build.targets.wheel]
packages = ["src/hal0"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
  "E501",  # line length (handled by formatter)
  "B008",  # function calls in argument defaults — Typer's documented API for Option/Argument
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
  "slow: tests that take >1s wall-clock (Cognee fixtures, etc.)",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

# ADR-0018: machine-readable record of the Hermes-Agent upstream commit
# hal0 v0.3 is vendored/shimmed against. Single source of truth — the
# weekly hermes-sdk-diff workflow + scripts/hermes-sdk-diff.sh read this
# table and nothing else. Bumps go through the process documented in
# ADR-0018 §4 (review drift issue, edit shim adapter if needed, run
# `scripts/hermes-sdk-diff.sh --bump <sha>`, δ-harness + γ-suite, open
# `chore(hermes): bump upstream pin to <short-sha>` PR).
[tool.hal0.upstream-hermes]
repo   = "https://github.com/earendil-works/hermes-agent"
commit = "0554ef1aa3a2e5818f292f76a676110239a5d34b"
date   = "2026-05-28"

# Surfaces hal0 vendors, shims, or proxies. The diff job only opens an
# issue when one of these paths changes between the pinned commit and
# upstream HEAD; commits that don't touch this list are ignored.
tracked_files = [
    "web/src/plugins/registry.ts",
    "web/src/plugins/slots.ts",
    "hermes_cli/web_server.py",
    "agent/memory_provider.py",
    "tools/registry.py",
    "agent/events.py",
]
